Ch - 49 Errors & Exceptions in JAVA
👉 Errors & Exceptions

No matter how smart we are, errors are our constant companions. With practice, we keep getting better at finding & correcting them.

👉 There are three types of errors in Java : 
1. Syntax errors
2. Logical errors
3. Runtime errors --> Also called Exceptions!

👉 Synatx errors :

When computer finds something wrong with our program it throws a syntax error.

CODE SNIPPET :

class SyntaxErrorDemo {
    public static void main(String[] args) {
        int a = 9
        a = a + 3;
        d = 4;   // variable not declared
    }
}

OUTPUT COMPILATION ERROR :

SyntaxErrorDemo.java:4: error: ';' expected
        int a = 9
                 ^
SyntaxErrorDemo.java:6: error: cannot find symbol
        d = 4;
        ^
  symbol:   variable d


👉 Logical errors :

A logical error or a bug occurs when a program compiles and runs but dows the wrong thing.

--> Message deliverd wrongly
--> Wrong time of chats being displayed
--> incorrect redirects!

CODE SNIPPET :

class LogicalErrorDemo {
    public static void main(String[] args) {
        int a = 10;
        int b = 5;

        int sum = a - b; // mistake (should be +)
        System.out.println("Sum is: " + sum);
    }
}

OUTPUT          : Sum is : 5
EXPECTED OUTPUT : Sum is : 15

👉 Runtime errors :
